WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265831
[IFC][Ruby] Do not break between ruby and special punctuation characters
https://bugs.webkit.org/show_bug.cgi?id=265831
Summary
[IFC][Ruby] Do not break between ruby and special punctuation characters
alan
Reported
2023-12-04 15:56:51 PST
ssia
Attachments
[fast-cq]Patch
(4.15 KB, patch)
2023-12-04 15:59 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-04 15:59:54 PST
Created
attachment 468876
[details]
[fast-cq]Patch
EWS
Comment 2
2023-12-05 07:59:03 PST
Committed
271553@main
(295f40ef1882): <
https://commits.webkit.org/271553@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468876
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-12-05 08:00:14 PST
<
rdar://problem/119188123
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug