[IFC][Ruby] Do not break between ruby and special punctuation characters https://bugs.webkit.org/show_bug.cgi?id=265831

Reviewed by Antti Koivisto.

Copy rules from RenderRubyText::canBreakBefore.

* LayoutTests/fast/ruby/ruby-punctuation-avoid-breaking.html:
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::canBreakAtCharacter):
(WebCore::Layout::RubyFormattingContext::isAtSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/271553@main